--- a/src/pages/tentes/_Tentes.scss
+++ b/src/pages/tentes/_Tentes.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 50px;
     .tentesHeader {
         width: 100%;
         background-color: black;
@@ -29,6 +30,7 @@
             width: 500px;
             height: 200px;
             background-color: gainsboro;
+            padding-bottom: 20px;
             button {
                 width: 200px;
                 height: 50px;
@@ -36,6 +38,10 @@
                 background-color: black;
                 color: white;
                 border: none;
+                &:hover {
+                    background-color: #FF6226;
+                    color: black;
+                   }
             }
            
         }
@@ -48,6 +54,7 @@
             background-color: black;
             color: white;
             width: 500px;
+            padding-bottom: 20px;
             button {
                 width: 200px;
                 height: 50px;
@@ -55,6 +62,10 @@
                 background-color: white;
                 color: black;
                 border: none;
+                &:hover {
+                    background-color: #FF6226;
+                    color: black;
+                   }
             }
         }
 
@@ -68,13 +79,51 @@
             display: flex;
             flex-direction: row;
             gap: 20px;
+          
             .tenteCard {
-            border: 1px solid black;
+            background-color: rgb(232, 232, 232);
             border-radius: 25px;
-            padding: 50px;
             display: flex;
             flex-direction: column;
             align-items: center;
+            overflow: hidden;
+            box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.257);
+            h4 {
+                background-color: black;
+                text-align: center;
+                color: white;
+                width: 100%;
+                padding: 10px;
+                margin: 0;
+                font-size: 1.5rem;
+                font-weight: 300;
+               
+            }
+            img {
+                height: 150px;
+        
+            }
+            ul {
+                list-style: none;
+             
+                li {
+                    width: 80%;
+                    text-align: center;
+                    border-bottom: 1px solid black;
+                    margin-top: 5px;
+                    padding-bottom: 5px;
+                }
+            }
+            button {
+                font-size: 18px;
+                margin-bottom: 20px;
+                transition: all 0.2s ease;
+               &:hover {
+                background-color: #FF6226;
+                color: black;
+               }
+                
+            }
             }
         }
     }
