--- a/src/pages/Home/evenements/_Evenements.scss
+++ b/src/pages/Home/evenements/_Evenements.scss
@@ -16,7 +16,7 @@
         align-items: center;
         
         .card1 {
-            background-image: url('/public/img/galery/Decoration.png');
+            background-image: url('/img/galery/Decoration.png');
          
             background-size: cover;
             background-position: center;
@@ -85,7 +85,7 @@
             }
         }
         .card2 {
-            background-image: url('/public/img/galery/tentes.png');
+            background-image: url('/img/galery/tentes.png');
             
             background-size: cover;
             background-position: center;
@@ -150,7 +150,7 @@
                }
         }
         .card3 {
-            background-image: url('/public/img/galery/Sonorisation.png');
+            background-image: url('/img/galery/Sonorisation.png');
             background-size: cover;
             background-position: center;
             display: flex;
