--- a/src/pages/Home/galeryShop/_GaleryShop.scss
+++ b/src/pages/Home/galeryShop/_GaleryShop.scss
@@ -17,7 +17,7 @@
         width: 33.33%;
         gap: 10px;
         .topLeft {
-            background-image: url('/public/img/galery/tentes.png');
+            background-image: url('/img/galery/tentes.png');
             background-size: cover;
             background-position: center;
             height: 50%;
@@ -46,7 +46,7 @@
                display: flex;
                justify-content: center;
                align-items: center;
-                background-image: url('/public/img/galery/Vaisselle.png');
+                background-image: url('/img/galery/Vaisselle.png');
                 background-size: cover;
                 background-position: center;
                 width: 50%;
@@ -66,7 +66,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                background-image: url('/public/img/galery/Decoration.png');
+                background-image: url('/img/galery/Decoration.png');
                 background-size: cover;
                 background-position: center;
                 width: 50%;
@@ -91,7 +91,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-image: url('/public/img/galery/Mobilier.jpg');
+        background-image: url('/img/galery/Mobilier.jpg');
         background-size: cover;
         background-position: center;
         color: white;
@@ -113,7 +113,7 @@
         height: 100%;
         gap: 10px;
         .topRight {
-            background-image: url('/public/img/galery/Sonorisation.png');
+            background-image: url('/img/galery/Sonorisation.png');
             background-size: cover;
             background-position: center;
             height: 50%;
@@ -133,7 +133,7 @@
   }
         }
         .bottomRight {
-            background-image: url('/public/img/galery/Borne_a_Selfies.png');
+            background-image: url('/img/galery/Borne_a_Selfies.png');
             background-size: cover;
             background-position: center;
             height: 50%;
