--- a/src/pages/Home/faq/_Faq.scss
+++ b/src/pages/Home/faq/_Faq.scss
@@ -39,7 +39,7 @@ padding: 20px 25px;
 
 .accordion__header::after {
     content: '';
-    background: url(/public/img/home/arrow.png) no-repeat center;
+    background: url(/img/home/arrow.png) no-repeat center;
     width: 20px;
     height: 20px;
     transition: .4s;
